fixed some spacing

--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@
         height: 310px;
         background: linear-gradient(to bottom right, #FEFEFE, #DACBD9);
     }
+    #about p {
+        padding-bottom: 20px;
+    }
     #about a{
         padding: 10px;
         font-size: 12pt;
@@ -82,6 +85,9 @@
         height: 600px;
         display: inline-block;
         background: linear-gradient(to bottom right, #FEFEFE, #DACBD9);
+    }
+    .subcontent p {
+        height: 175px;
     }
     .subcontent a{
         margin: 5px 30% 5px 28%;
